--- a/BigSchool/Content/Site.css
+++ b/BigSchool/Content/Site.css
@@ -4,7 +4,7 @@
 }
 
 /* Set padding to keep content from hitting the edges */
-.body-content {
+.body-content { 
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -37,7 +37,7 @@ textarea {
         color: white;
     }
 .clear{
-    clear both;
+    clear: both;
 }
 .course  li{
     position: relative;
@@ -56,7 +56,7 @@ textarea {
     border-bottom: 1px solid;
 }
 .course-detail{
-  width:70%;
+  width:90%;
   float:left;
   padding-left:20px;
 }
